--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
-.grid {
+#grid {
     display: grid;
-    grid-template-columns: 300px 300px 300px 300px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 10px;
     column-gap: 10px;
 }
 
-@media only screen and (min-width: 300px) and (max-width: 767px){
-    .grid {
+
+.grid-item img {
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+    #grid {
         display: grid;
-        grid-template-columns: 300px 300px;
+        grid-template-columns: 1fr 1fr 1fr;
         row-gap: 10px;
         column-gap: 10px;
     }
     
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px){
-    .grid {
+@media only screen and (max-width: 768px){
+    #grid {
         display: grid;
-        grid-template-columns: 300px 300px 300px;
+        grid-template-columns: 1fr 1fr;
         row-gap: 10px;
         column-gap: 10px;
     }
